--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div>
             <section>
                 <h2 id="AboutMe">About Me</h2>
+                <P>An excelent 5th Informatics Student. This is my first Web Porto</P>
                 
             </section>
             <section>
