--- a/index.html
+++ b/index.html
@@ -14,24 +14,44 @@
 </head>
 
 <body>
-    <header class="bg-indigo-600 text-white py-4 px-6 flex justify-between items-center">
+    <header class="bg-indigo-600 text-white py-4 px-6 flex justify-between items-center relative">
         <h1 class="text-xl font-bold">Dimas Rizqia Hidayat</h1>
-        <nav>
-            <ul class="flex gap-6">
-                <li><a href="#about" class="hover:underline">About me</a></li>
-                <li><a href="#porto" class="hover:underline">Portofolio</a></li>
-                <li><a href="#contact" class="hover:underline">Contact</a></li>
-            </ul>
+
+        <!-- Hamburger button -->
+        <button id="menu-btn" class="md:hidden focus:outline-none">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
+
+        <!-- Menu list -->
+        <nav id="menu" class="hidden md:flex flex-col md:flex-row gap-10 md:gap-10
+            absolute md:static top-full left-0 w-full md:w-auto
+            bg-indigo-600 md:bg-transparent p-6 md:p-0">
+            <a href="#about" class="block hover:underline">About me</a>
+            <a href="#porto" class="block hover:underline">Portofolio</a>
+            <a href="#contact" class="block hover:underline">Contact</a>
         </nav>
     </header>
+
+    <script>
+        const btn = document.getElementById("menu-btn");
+        const menu = document.getElementById("menu");
+
+        btn.addEventListener("click", () => {
+            menu.classList.toggle("hidden");
+        });
+    </script>
+
+
     <main>
         <div>
             <section id="about" class="bg-gray-50 py-16 px-6">
                 <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                     <!-- Foto / Avatar -->
                     <div class="flex justify-center">
-                        <img src="https://via.placeholder.com/300" alt="Dimas Rizqia Hidayat"
-                            class="rounded-2xl shadow-lg w-64 h-64 object-cover" />
+                        <img src="assets/image/profil-pict.JPG" alt="Dimas Rizqia Hidayat"
+                            class="rounded-2xl shadow-lg w-64 h-auto h-64 object-cover" />
                     </div>
 
                     <!-- Teks About Me -->
@@ -58,7 +78,7 @@
                         </p>
 
                         <!-- CTA -->
-                        <a href="#Porto"
+                        <a href="#porto"
                             class="inline-block bg-indigo-600 text-white px-6 py-3 rounded-xl shadow hover:bg-indigo-700 transition">
                             See My Projects
                         </a>
@@ -69,16 +89,89 @@
             <!-- Portfolio Section -->
             <section id="porto" class="py-16 px-6">
                 <div class="max-w-5xl mx-auto">
-                    <h2 class="text-3xl font-bold mb-6">Portofolio</h2>
-                    <p class="text-gray-600">Coming soon...</p>
+                    <h2 class="text-3xl font-bold mb-10">Portofolio</h2>
+
+                    <!-- Grid Cards -->
+                    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <!-- Card 1 -->
+                        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-6">
+                            <img src="https://via.placeholder.com/400x200" alt="Project 1" class="rounded-xl mb-4">
+                            <h3 class="text-xl font-semibold mb-2">Sorting Visualizer</h3>
+                            <p class="text-gray-600 mb-4">
+                                A web app to visualize sorting algorithms like Bubble Sort, Merge Sort, and Quick Sort.
+                            </p>
+                            <div class="flex gap-3">
+                                <a href="https://github.com/dimaswae/sorting-visualizer"
+                                    class="text-indigo-600 hover:underline">GitHub</a>
+                                <a href="#" class="text-indigo-600 hover:underline">Live Demo</a>
+                            </div>
+                        </div>
+
+                        <!-- Card 2 -->
+                        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-6">
+                            <img src="https://via.placeholder.com/400x200" alt="Project 2" class="rounded-xl mb-4">
+                            <h3 class="text-xl font-semibold mb-2">RFID Attendance System</h3>
+                            <p class="text-gray-600 mb-4">
+                                An IoT project using RFID to track attendance, integrated with Google Spreadsheet.
+                            </p>
+                            <div class="flex gap-3">
+                                <a href="#" class="text-indigo-600 hover:underline">GitHub</a>
+                                <a href="#" class="text-indigo-600 hover:underline">Demo</a>
+                            </div>
+                        </div>
+
+                        <!-- Card 3 (tambahan opsional) -->
+                        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-6">
+                            <img src="https://via.placeholder.com/400x200" alt="Project 3" class="rounded-xl mb-4">
+                            <h3 class="text-xl font-semibold mb-2">Personal Portfolio</h3>
+                            <p class="text-gray-600 mb-4">
+                                My own responsive personal website built with HTML, Tailwind CSS, and deployed on GitHub
+                                Pages.
+                            </p>
+                            <div class="flex gap-3">
+                                <a href="#" class="text-indigo-600 hover:underline">GitHub</a>
+                                <a href="#" class="text-indigo-600 hover:underline">Live</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <!-- Contact Section -->
             <section id="contact" class="bg-gray-50 py-16 px-6">
-                <div class="max-w-5xl mx-auto">
+                <div class="max-w-3xl mx-auto">
                     <h2 class="text-3xl font-bold mb-6">Contact Me</h2>
-                    <p class="text-gray-600">Email: dimas@example.com</p>
+                    <p class="text-gray-600 mb-8">Feel free to reach out if you want to collaborate or just say hi 👋
+                    </p>
+
+                    <form action="mailto:dimas@example.com" method="POST" enctype="text/plain" class="space-y-6">
+                        <!-- Name -->
+                        <div>
+                            <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+                            <input type="text" id="name" name="name" required
+                                class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        </div>
+
+                        <!-- Email -->
+                        <div>
+                            <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                            <input type="email" id="email" name="email" required
+                                class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        </div>
+
+                        <!-- Message -->
+                        <div>
+                            <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+                            <textarea id="message" name="message" rows="4" required
+                                class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+                        </div>
+
+                        <!-- Submit -->
+                        <button type="submit"
+                            class="bg-indigo-600 text-white px-6 py-3 rounded-xl shadow hover:bg-indigo-700 transition">
+                            Send Message
+                        </button>
+                    </form>
                 </div>
             </section>
         </div>
@@ -92,4 +185,5 @@
         <p>&copy; 2024 Dimas Rizqia Hidayat. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
