--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <p class="text-gray-600 mb-8">Feel free to reach out if you want to collaborate or just say hi 👋
                     </p>
 
-                    <form action="mailto:dimas@example.com" method="POST" enctype="text/plain" class="space-y-6">
+                    <form action="mailto:rizqiadimas@gmail.com" method="POST" enctype="text/plain" class="space-y-6">
                         <!-- Name -->
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
@@ -182,7 +182,7 @@
 
     <!-- Footer -->
     <footer class="bg-gray-100 text-center py-6 mt-10 text-gray-600">
-        <p>&copy; 2024 Dimas Rizqia Hidayat. All rights reserved.</p>
+        <p>&copy; 2025 Dimas Rizqia Hidayat. All rights reserved.</p>
     </footer>
 </body>
 
